# cwbproj

./: AGENTS.md  PRD.md  README.md  SOLUTION_ARCHITECTURE.md  Starting.md
.github/workflows/: azure-static-web-apps-blue-desert-0dd81d900.yml  main_careerhive-maf.yml  main_jobmatch-maf.yml  main_jobmatch.yml
careerhive/: .gitignore  README.md  tsconfig.json
careerhive/agent-service/: .env.example  README.md  pyproject.toml  requirements.txt
careerhive/agent-service/app/: agents.py  canonicalize.py  main.py  pipeline.py
careerhive/backend/: .env.example  package-lock.json  package.json  server.js
careerhive/backend/src/routes/: analyze.js  history.js  jobs.js  smoke.js
careerhive/backend/src/services/: cosmosStore.js  jobScraper.js  orchestrator.js  providerFactory.js  resumeExtractor.js  semanticKernelOrchestrator.js
careerhive/frontend/: interviewprep.html  roadmapanimation.jsx
careerhive/frontend/public/: staticwebapp.config.json
careerhive/frontend/src/: main.js  styles.css
careerhive/maf-service/: agents.py  main.py  requirements.txt  startup.sh
cwbproj/careerhive/frontend/src/: main.js
jobpilot-ai/: README.md
jobpilot-ai/backend/: .env.example  package-lock.json  package.json  server.js
jobpilot-ai/backend/src/routes/: analyze.js  history.js  interview.js
jobpilot-ai/backend/src/services/: cosmosStore.js  orchestrator.js  resumeExtractor.js  semanticKernelOrchestrator.js  (+1 more)
jobpilot-ai/frontend/: analysisbystitch.html  dashboardbystitch.html  index.html  package-lock.json  package.json
jobpilot-ai/frontend/src/: main.js  styles.css
(+7 files in other folders)
